--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto cordel</title>
     <link rel="stylesheet" href="style/style.css">
+    <link rel="shortcut icon" href="imagens/cordel.jpg" type="image/x-icon">
 </head>
 <body>
     
