--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <header>
         <h1>Cordel Moderno</h1>
         <h2>Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank"> Milton Duarte</a></h2>
+        <p>Para uma melhor experiência em smartphones, <br> recomendamos vizualisar o site com o aparelho na horizontal</p>
     </header>
 
     <main>
